# intel-ai

./: Welcome.ipynb  setupenv.sh  setupenv.sh.e899375  setupenv.sh.o899375
Intel_oneAPI_MKL_Training/00_GEMM/: 00_GEMM.ipynb  01_GEMM_DPCPP_Buffers.ipynb  02_GEMM_DPCPP_USM.ipynb
Intel_oneAPI_MKL_Training/00_GEMM/lab/: dpcpp_gemm_buffers.cpp  dpcpp_gemm_usm.cpp
OSPRay_Essentials/: .Overview.ipynb.swp  Overview.ipynb  README.md  renderkit-notebooks.code-workspace
OSPRay_Essentials/release/00_Introduction_to_Jupyter/: Introduction_to_Jupyter.ipynb
OSPRay_Essentials/release/01_RenderKit_Intro/: RenderKit_Intro.ipynb
OSPRay_Essentials/release/02_OSPRay_Intro/: CMakeLists.txt  OSPRay_Intro.ipynb  build.sh  q  run.sh
OSPRay_Essentials/release/02_OSPRay_Intro/src/: ospTutorial.cpp
OSPRay_Essentials/release/03_ospExamples/: CMakeLists.txt  build.sh  ospExamples.ipynb  run.sh
OSPRay_Essentials/release/03_ospExamples/src/: ospExamples.cpp
OSPRay_Essentials/release/04_asset_load/: 04_asset_loader.ipynb  CMakeLists.txt  build.sh  run.sh
OSPRay_Essentials/release/04_asset_load/assets/: chalet.mtl  teapot.mtl  viking_room.mtl
OSPRay_Essentials/release/04_asset_load/src/: main.cpp
OSPRay_Essentials/release/resources/: untitled.blend  untitled.blend1
OSPRay_Essentials/release/utils/rkutil/1.0.0/licensing/: third-party-programs.txt
OpenMP_Offload/: OpenMP Welcome.ipynb
OpenMP_Offload/intro/: intro.ipynb  intro_f.ipynb
OpenMP_Offload/parallelism/: parallelism_f.ipynb
OpenMP_Offload/parallelism/.ipynb_checkpoints/: parallelism-checkpoint.ipynb
oneAPI_Essentials/: README.md  Welcome.ipynb
oneAPI_Essentials/01_oneAPI_Intro/: oneAPI_Intro.ipynb
oneAPI_Essentials/02_DPCPP_Program_Structure/: DPCPP_Program_Structure.ipynb
oneAPI_Essentials/04_DPCPP_Sub_Groups/: Sub_Groups.ipynb
oneAPI_Essentials/04_DPCPP_Sub_Groups/lab/: sub_group_info.cpp
oneAPI_Essentials/04_DPCPP_Sub_Groups/src/: sub_group_broadcast.cpp  sub_group_reduce.cpp  sub_group_votes.cpp
oneAPI_Essentials/07_DPCPP_Library/: oneDPL_extension_API.ipynb
oneAPI_Essentials/07_DPCPP_Library/lab/: maximum_function.cpp
oneAPI_Essentials/08_DPCPP_Reduction/: Reductions.ipynb
oneAPI_Essentials/09_DPCPP_Buffers_And_Accessors_Indepth/: DPCPP_Buffers_accessors.ipynb  Readme.md
